test/docker-compose.yml
version: '2'
services:

  front-envoy:
    build:
      context: .
      dockerfile: Dockerfile-frontenvoy
    volumes:
      - ./front-envoy.yaml:/etc/front-envoy.yaml
      - ./cf-service.crt:/var/vcap/jobs/envoy/config/certs/cf-service.crt
      - ./cf-service.key:/var/vcap/jobs/envoy/config/certs/cf-service.key
      - ./ca.crt:/var/vcap/jobs/envoy/config/certs/ca.crt
    networks:
      - envoymesh
    expose:
      - "80"
      - "8001"
    ports:
      - "8000:80"
      - "8001:8001"

  service1:
    build:
      context: .
      dockerfile: Dockerfile-service
    volumes:
      - ./service-envoy.yaml:/etc/service-envoy.yaml
    networks:
      envoymesh:
        aliases:
          - service1
    environment:
      - SERVICE_NAME=1
    expose:
      - "80"

  service2:
    build:
      context: .
      dockerfile: Dockerfile-service
    volumes:
      - ./service-envoy.yaml:/etc/service-envoy.yaml
    networks:
      envoymesh:
        aliases:
          - service2
    environment:
      - SERVICE_NAME=2
    expose:
      - "80"

  istio-pilot:
    build:
      context: .
      dockerfile: Dockerfile-istio-pilot 
    volumes:
    - ./mesh-config.yaml:/etc/mesh-config.yaml
    - ./config/sub/istio-test.yaml:/etc/istio-config/istio-test.yaml
    networks:
      envoymesh:
        aliases:
          - istio-pilot
    expose:
      - "8000"
      - "15010"

networks:
  envoymesh: {}
