test/istio-pilot.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pinger-gateway
spec:
  servers:
  - hosts:
    - pinger.istio.cf.dev01.aws.istio.sapcloud.io
    port:
      number: 9000
      name: tls
      protocol: HTTP
#    tls:
#      mode: MUTUAL
#      serverCertificate: /var/vcap/jobs/envoy/config/certs/cf-service.crt
#      privateKey: /var/vcap/jobs/envoy/config/certs/cf-service.key
#      caCertificates: /var/vcap/jobs/envoy/config/certs/ca.crt
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pinger
spec:
  hosts:
  - pinger.istio.cf.dev01.aws.istio.sapcloud.io
  gateways:
  - pinger-gateway
  tcp:
  - route:
    - destination:
        host: istio-pinger.istio
        port:
          number: 8081
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: pinger
spec:
  hosts:
  - istio-pinger.istio
  ports:
  - number: 8081
    name: pinger
    protocol:  TCP
  resolution: STATIC
  endpoints:
  - address: 10.0.81.2
