test/mesh-config.yaml
config_sources:
- address: host.docker.internal:18000
- address: fs:///etc/istio-config/
